crates/plotnik-tests/tests/04-emit/types/captures/builtin_can_expose_custom_name_conflict.txt
Q = (program
  {
    (comment) @x :: text
  } @a :: Foo
  {
    (comment) @x
  } @b :: Foo
)
------------------ DIAGNOSTICS -------------------
error: type name `Foo` is already used for a different type
 --> query.ptk:7:11
  |
4 |   } @a :: Foo
  |           --- already used here
...
7 |   } @b :: Foo
  |           ^^^
